[package]
name = "treeid"
version = "0.2.3"
authors = ["nytopop <ericizoita@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An implementation of rational buckets for lexically ordered collections."
documentation = "https://docs.rs/treeid"
homepage = "https://github.com/nytopop/treeid"
repository = "https://github.com/nytopop/treeid"

[dependencies]
itertools = "0.7.8"
bitvec = "0.6.0"
byteorder = "1.2.7"

[dev-dependencies]
rand = "0.6.0"
num-rational = "0.2.1"
num-bigint = "0.2.0"
